// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tab-web-platform shared/Card/Progress Complete 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class="sb-show-nopreview"
  >
    <div>
      <div
        class="flex w-full"
      >
        <div
          class="flex w-11/12 pr-2 items-center justify-items-center"
        >
          <div
            class="bg-gray-4 w-full"
          >
            <div
              class="h-full px-1 bg-green-5"
              style="width: 100%; padding-top: 2px; padding-bottom: 2px;"
            />
          </div>
        </div>
        <div
          class="inline-block w-1/12 pl-2"
        >
          10/10
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex w-full"
    >
      <div
        class="flex w-11/12 pr-2 items-center justify-items-center"
      >
        <div
          class="bg-gray-4 w-full"
        >
          <div
            class="h-full px-1 bg-green-5"
            style="width: 100%; padding-top: 2px; padding-bottom: 2px;"
          />
        </div>
      </div>
      <div
        class="inline-block w-1/12 pl-2"
      >
        10/10
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`tab-web-platform shared/Card/Progress Half 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class="sb-show-nopreview"
  >
    <div>
      <div
        class="flex w-full"
      >
        <div
          class="flex w-11/12 pr-2 items-center justify-items-center"
        >
          <div
            class="bg-gray-4 w-full"
          >
            <div
              class="h-full px-1 bg-green-5"
              style="width: 50%; padding-top: 2px; padding-bottom: 2px;"
            />
          </div>
        </div>
        <div
          class="inline-block w-1/12 pl-2"
        >
          5/10
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex w-full"
    >
      <div
        class="flex w-11/12 pr-2 items-center justify-items-center"
      >
        <div
          class="bg-gray-4 w-full"
        >
          <div
            class="h-full px-1 bg-green-5"
            style="width: 50%; padding-top: 2px; padding-bottom: 2px;"
          />
        </div>
      </div>
      <div
        class="inline-block w-1/12 pl-2"
      >
        5/10
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
